Deleted overflow-block in order to prevent mobile ui/ux bugs

--- a/sass/top-rated.scss
+++ b/sass/top-rated.scss
@@ -5,6 +5,7 @@
   grid-template-columns: repeat(5, 1fr);
   grid-gap: 20px;
   margin-left: 10px;
+  margin-bottom: 10px;
 
   @media screen and (max-width: 1280px) {
     grid-template-columns: repeat(4, 1fr);
